# sdl2_physics_simul

./: CMakeLists.txt  README.md
.cache/clangd/index/: graphics.cpp.3E50E330387A4419.idx  graphics.hpp.0D0ABFF9C11A9F1D.idx  main.cpp.13B2D1A2DB0A83E9.idx  math.hpp.B6D1FADA0EB89920.idx  object.cpp.01E4CDDE6B474B8D.idx  object.hpp.5F893EFF4A7F6556.idx  physics.cpp.3F0F0A913B8DB029.idx  physics.hpp.F84590ACBFD1FE3D.idx  world.cpp.339C36AF2351A3F6.idx  world.hpp.E3F15843EBE253BF.idx
include/: graphics.hpp  object.hpp  physics.hpp  world.hpp
src/: graphics.cpp  main.cpp  object.cpp  physics.cpp  world.cpp
utils/: math.hpp
